Added favorites list and flow

--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -320,6 +320,19 @@ html, body {
     color: #fff !important;
 }
 
+.ant-tabs .ant-tabs-tab[data-node-key="developers"],
+.ant-tabs .ant-tabs-tab[data-node-key="developers"]:hover,
+.ant-tabs .ant-tabs-tab[data-node-key="developers"]:focus,
+.ant-tabs .ant-tabs-tab[data-node-key="developers"]:active,
+.ant-tabs .ant-tabs-tab[data-node-key="developers"]:focus:not(:focus-visible),
+.ant-tabs .ant-tabs-tab[data-node-key="developers"]:focus:not(:focus-visible),
+.ant-tabs .ant-tabs-tab[data-node-key="developers"] .ant-tabs-tab-btn:focus:not(:focus-visible),
+.ant-tabs .ant-tabs-tab[data-node-key="developers"] .ant-tabs-tab-btn:focus:not(:focus-visible),
+.ant-tabs .ant-tabs-tab-active[data-node-key="developers"] {
+    background-color: #d8002c !important;
+    color: #fff !important;
+}
+
 
 /*google maps*/
 
